[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/panel.jpg" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/VCRFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/TVComponents/Panel/ButtonPanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/InteractionUI/VolumeUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/TV.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/InteractionUI/SaturationUI.tscn" type="PackedScene" id=7]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Window" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerZone" type="HBoxContainer" parent="Window"]
margin_right = 1024.0
margin_bottom = 496.0
size_flags_vertical = 3

[node name="Player1" type="VBoxContainer" parent="Window/PlayerZone"]
margin_right = 325.0
margin_bottom = 496.0
rect_min_size = Vector2( 325, 0 )

[node name="Label" type="Label" parent="Window/PlayerZone/Player1"]
margin_right = 325.0
margin_bottom = 14.0
text = "Player one"

[node name="Control" type="Control" parent="Window/PlayerZone/Player1"]
margin_top = 18.0
margin_right = 325.0
margin_bottom = 251.4
rect_min_size = Vector2( 0, 233.4 )

[node name="WoodPanelLeft" type="Sprite" parent="Window/PlayerZone/Player1"]
position = Vector2( 158.613, 236.921 )
scale = Vector2( 1.30749, 1.79895 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 105.47, 200, 300, 200 )

[node name="ButtonsLeftRowsTop" type="VBoxContainer" parent="Window/PlayerZone/Player1"]
margin_top = 255.0
margin_right = 325.0
margin_bottom = 359.0

[node name="ButtonsLeftCols" type="HBoxContainer" parent="Window/PlayerZone/Player1/ButtonsLeftRowsTop"]
margin_right = 325.0
margin_bottom = 50.0
alignment = 1

[node name="Button1" parent="Window/PlayerZone/Player1/ButtonsLeftRowsTop/ButtonsLeftCols" instance=ExtResource( 4 )]
text = "CHNL"

[node name="Button2" parent="Window/PlayerZone/Player1/ButtonsLeftRowsTop/ButtonsLeftCols" instance=ExtResource( 4 )]
margin_left = 110.0
margin_right = 160.0

[node name="Button3" parent="Window/PlayerZone/Player1/ButtonsLeftRowsTop/ButtonsLeftCols" instance=ExtResource( 4 )]
margin_left = 164.0
margin_right = 214.0
text = "SAT"

[node name="Button4" parent="Window/PlayerZone/Player1/ButtonsLeftRowsTop/ButtonsLeftCols" instance=ExtResource( 4 )]
margin_left = 218.0
margin_right = 268.0
text = "ZOOM"

[node name="ButtonsLeftCols2" type="HBoxContainer" parent="Window/PlayerZone/Player1/ButtonsLeftRowsTop"]
margin_top = 54.0
margin_right = 325.0
margin_bottom = 104.0
alignment = 1

[node name="Button1" parent="Window/PlayerZone/Player1/ButtonsLeftRowsTop/ButtonsLeftCols2" instance=ExtResource( 4 )]
text = "ORI"

[node name="Button2" parent="Window/PlayerZone/Player1/ButtonsLeftRowsTop/ButtonsLeftCols2" instance=ExtResource( 4 )]
margin_left = 110.0
margin_right = 160.0
text = "CYN"

[node name="Button3" parent="Window/PlayerZone/Player1/ButtonsLeftRowsTop/ButtonsLeftCols2" instance=ExtResource( 4 )]
margin_left = 164.0
margin_right = 214.0
text = "MGA"

[node name="Button4" parent="Window/PlayerZone/Player1/ButtonsLeftRowsTop/ButtonsLeftCols2" instance=ExtResource( 4 )]
margin_left = 218.0
margin_right = 268.0
text = "YLW"

[node name="TVView" type="VBoxContainer" parent="Window/PlayerZone"]
margin_left = 329.0
margin_right = 695.0
margin_bottom = 496.0
size_flags_horizontal = 3

[node name="Control" type="Control" parent="Window/PlayerZone/TVView"]
margin_right = 366.0
margin_bottom = 53.52
rect_min_size = Vector2( 0, 53.52 )

[node name="TimeLeft" type="Label" parent="Window/PlayerZone/TVView/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "1:50.23"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TV" parent="Window/PlayerZone/TVView" instance=ExtResource( 6 )]
margin_top = 57.0
margin_right = 366.0
margin_bottom = 57.0
size_flags_horizontal = 3

[node name="TVUI" type="Control" parent="Window/PlayerZone/TVView"]
margin_top = 61.0
margin_right = 366.0
margin_bottom = 330.19
rect_min_size = Vector2( 0, 269.19 )

[node name="Volume" parent="Window/PlayerZone/TVView/TVUI" instance=ExtResource( 5 )]
margin_left = 80.0
margin_top = 207.0
margin_bottom = -0.190002

[node name="Saturation" parent="Window/PlayerZone/TVView/TVUI" instance=ExtResource( 7 )]
margin_left = 71.0
margin_top = 174.0
margin_right = 71.0
margin_bottom = 174.0
rect_scale = Vector2( 1, 0.5 )

[node name="Player2" type="VBoxContainer" parent="Window/PlayerZone"]
margin_left = 699.0
margin_right = 1024.0
margin_bottom = 496.0
rect_min_size = Vector2( 325, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Window/PlayerZone/Player2"]
margin_right = 325.0
margin_bottom = 14.0
text = "Player two"

[node name="Control2" type="Control" parent="Window/PlayerZone/Player2"]
margin_top = 18.0
margin_right = 325.0
margin_bottom = 251.4
rect_min_size = Vector2( 0, 233.4 )

[node name="WoodPanelRight" type="Sprite" parent="Window/PlayerZone/Player2"]
position = Vector2( 162.89, 236.688 )
scale = Vector2( 1.25582, 1.799 )
z_index = -1
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 359.32, 200, 300, 200 )

[node name="ButtonsRightRowsTop" type="VBoxContainer" parent="Window/PlayerZone/Player2"]
margin_top = 255.0
margin_right = 325.0
margin_bottom = 359.0

[node name="ButtonsRightCols" type="HBoxContainer" parent="Window/PlayerZone/Player2/ButtonsRightRowsTop"]
margin_right = 325.0
margin_bottom = 50.0
alignment = 1

[node name="Button1" type="Button" parent="Window/PlayerZone/Player2/ButtonsRightRowsTop/ButtonsRightCols"]
margin_left = 56.0
margin_right = 106.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = ExtResource( 3 )
text = "VOL"

[node name="Button2" type="Button" parent="Window/PlayerZone/Player2/ButtonsRightRowsTop/ButtonsRightCols"]
margin_left = 110.0
margin_right = 160.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = ExtResource( 3 )
text = "VOL"

[node name="Button3" type="Button" parent="Window/PlayerZone/Player2/ButtonsRightRowsTop/ButtonsRightCols"]
margin_left = 164.0
margin_right = 214.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = ExtResource( 3 )
text = "VOL"

[node name="Button4" type="Button" parent="Window/PlayerZone/Player2/ButtonsRightRowsTop/ButtonsRightCols"]
margin_left = 218.0
margin_right = 268.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = ExtResource( 3 )
text = "VOL"

[node name="ButtonsRightCols2" type="HBoxContainer" parent="Window/PlayerZone/Player2/ButtonsRightRowsTop"]
margin_top = 54.0
margin_right = 325.0
margin_bottom = 104.0
alignment = 1

[node name="Button1" type="Button" parent="Window/PlayerZone/Player2/ButtonsRightRowsTop/ButtonsRightCols2"]
margin_left = 56.0
margin_right = 106.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = ExtResource( 3 )
text = "VOL"

[node name="Button2" type="Button" parent="Window/PlayerZone/Player2/ButtonsRightRowsTop/ButtonsRightCols2"]
margin_left = 110.0
margin_right = 160.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = ExtResource( 3 )
text = "VOL"

[node name="Button3" type="Button" parent="Window/PlayerZone/Player2/ButtonsRightRowsTop/ButtonsRightCols2"]
margin_left = 164.0
margin_right = 214.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = ExtResource( 3 )
text = "VOL"

[node name="Button4" type="Button" parent="Window/PlayerZone/Player2/ButtonsRightRowsTop/ButtonsRightCols2"]
margin_left = 218.0
margin_right = 268.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = ExtResource( 3 )
text = "VOL"

[node name="BottomInfo" type="HBoxContainer" parent="Window"]
margin_top = 500.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 100 )
